--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,14 @@ services:
       args:
         user: ${USERNAME:-WWW}
         uid: ${UID:-1000}
-      context: ./
+      context: ./api/
       dockerfile: Dockerfile
     image: developers
     container_name: developers-app
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
-      - ./:/var/www
+      - ./api/:/var/www
     networks:
       - developers
 
@@ -25,6 +25,8 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_USER: ${DB_USERNAME}
+    volumes:
+      - ./.docker/data:/var/lib/mysql
     networks:
       - developers
 
@@ -35,7 +37,7 @@ services:
     ports:
       - 8000:80
     volumes:
-      - ./:/var/www
+      - ./api/:/var/www
       - ./.docker/nginx:/etc/nginx/conf.d
     networks:
       - developers
