--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,17 @@ services:
     networks:
       - developers
 
+  frontend:
+    build:
+      context: ./frontend/
+      dockerfile: Dockerfile
+    container_name: developers-frontend-app
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./frontend/:/app
+      - /app/node_modules
+
 networks:
   developers:
     driver: bridge
