--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,12 @@ WORKDIR /app
 
 COPY package.json .
 
+COPY yarn.lock .
+
 RUN yarn install
 
 COPY . .
+
+RUN yarn build
 
 CMD [ "yarn", "run", "dev" ]
