test: add github actions step test

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --coverage --silent"
   },
   "resolutions": {
     "string-width": "4.2.3",
